<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World!</string>
    <string name="message_title">Welcome to my application, it is great !!!</string>
    <string name="message_content">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="date">30/12/2012</string>
    
    
<string name="app_name">CTC.</string>
    
    
    <string name="open_feedback">Feedback</string>
    <string name="open_more_apps">More Apps</string>
    <string name="inbox_title">My Inbox</string>
    <string name="mark_as_read">Mark as read</string>
    <string name="delete">DELETE</string>
    <string name="more_apps_icon">More apps icon</string>
    <string name="feedback_icon">Feedback icon</string>
    <string name="close_icon">Close icon</string>
    <string name="more_apps_title">More Apps</string>
    <string name="inbox_icon">Inbox icon</string>
    <string name="appoxee_logo">Appoxee logo</string>
    <string name="powered_by">Powered By:</string>
    <string name="separator">Separator</string>
    <string name="no_messages_yet">No messages yet</string>
    <string name="feedback_title">Feedback</string>
    <string name="oops_logo">Oops</string>
    <string name="oops_icon">Connection problem</string>
    <string name="oops_message">Seems we have a problem, Please try again later</string>
    <string name="pull_to_refresh_tap_label">Tap to refresh...</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh...</string>
    <string name="pull_to_refresh_release_label">Release to refresh...</string>
    <string name="pull_to_refresh_refreshing_label">Loading...</string>
</resources>